feat(mackup): setup ignore list for mackup

--- a/templates/.mackup.cfg
+++ b/templates/.mackup.cfg
@@ -1,2 +1,25 @@
-[application_to_ignore]
+[applications_to_ignore]
+1password-4
+adobe-camera-raw
+atom
+bash
+daisydisk
+dash
+emacs
+filezilla
+flux
+lightroom
+macvim
+mercurial
+microsoft-remote-desktop
+monodevelop
+photoshop
+spectacle
+spotify
+sublime-text-2
+sublime-text-3
+subversion
+tower-2
 vscode
+webstorm
+whatsapp
